--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -32,7 +32,7 @@ requirements:
     - r-adehabitathr >=0.4.11
     - r-adehabitatma >=0.3.8
     - r-ape >=3.2
-    - r-biomod2 >=3.1_64
+    - r-biomod2 <4.0
     - r-classint >=0.1_23
     - r-dismo >=0.9_3
     - r-doparallel >=1.0.10
@@ -61,7 +61,7 @@ requirements:
     - r-adehabitathr >=0.4.11
     - r-adehabitatma >=0.3.8
     - r-ape >=3.2
-    - r-biomod2 >=3.1_64
+    - r-biomod2 <4.0
     - r-classint >=0.1_23
     - r-dismo >=0.9_3
     - r-doparallel >=1.0.10
