--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,7 +20,6 @@ build:
     - lib/R/lib/
     - lib/
 
-
 requirements:
   build:
     - {{ posix }}zip               # [win]
@@ -33,25 +32,20 @@ requirements:
     - r-adehabitathr >=0.4.11
     - r-adehabitatma >=0.3.8
     - r-ape >=3.2
-    - r-biomod2 <4.0
+    - r-biomod2 >=4.1
     - r-classint >=0.1_23
     - r-dismo >=0.9_3
-    - r-doparallel >=1.0.10
     - r-ecodist >=1.2.9
     - r-foreach >=1.4.3
     - r-gbm >=2.1.1
     - r-gtools >=3.4.1
-    - r-iterators >=1.0.8
     - r-ks >=1.12.0
-    - r-maps >=3.0.0
     - r-maptools >=0.8_39
     - r-matrixstats >=0.53.1
     - r-nabor >=0.5.0
     - r-poibin >=1.3
     - r-randomforest >=4.6_7
     - r-raster >=2.5_8
-    - r-rms >=4.5_0
-    - r-snowfall >=1.61
     - r-sp >=1.0_15
     - r-vegan >=2.4_1
   run:
@@ -62,25 +56,20 @@ requirements:
     - r-adehabitathr >=0.4.11
     - r-adehabitatma >=0.3.8
     - r-ape >=3.2
-    - r-biomod2 <4.0
+    - r-biomod2 >=4.1
     - r-classint >=0.1_23
     - r-dismo >=0.9_3
-    - r-doparallel >=1.0.10
     - r-ecodist >=1.2.9
     - r-foreach >=1.4.3
     - r-gbm >=2.1.1
     - r-gtools >=3.4.1
-    - r-iterators >=1.0.8
     - r-ks >=1.12.0
-    - r-maps >=3.0.0
     - r-maptools >=0.8_39
     - r-matrixstats >=0.53.1
     - r-nabor >=0.5.0
     - r-poibin >=1.3
     - r-randomforest >=4.6_7
     - r-raster >=2.5_8
-    - r-rms >=4.5_0
-    - r-snowfall >=1.61
     - r-sp >=1.0_15
     - r-vegan >=2.4_1
 
